# authoring

./: ARCHITECTURE.md  Cargo.toml  README.md  extraction-tench-authoring.md
apps/story/: README.md
apps/story/src-tauri/: Cargo.toml  tauri.conf.json
apps/story/src-tauri/capabilities/: default.json
apps/story/src-tauri/src/: commands.rs  lib.rs  main.rs  markdown_io.rs
apps/story/src-tauri/src/ui/: automation.rs  chapter_tree.rs  commands.rs  editor.rs  export.rs  geometry.rs  mod.rs  overlays.rs  panels.rs  state.rs  widget.rs
apps/story/src-tauri/tests/: plan_ui_e2e.rs
apps/universe/: README.md
apps/universe/src-tauri/: Cargo.toml  tauri.conf.json
apps/universe/src-tauri/capabilities/: default.json
apps/universe/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/universe/src-tauri/src/ui/: chat.rs  editor.rs  mod.rs  state.rs
apps/universe/src-tauri/tests/: plan_ui_e2e.rs
crates/story-core/: Cargo.toml
crates/story-core/src/: engine.rs  lib.rs  models.rs  project_io.rs
crates/story-core/src/engine/: chapters.rs  history.rs  lore.rs  search.rs  support.rs  tests.rs  updates.rs
crates/tench-ui/: Cargo.toml
crates/tench-ui-test/: Cargo.toml
crates/workspace-core/: Cargo.toml
crates/workspace-core/src/: lib.rs
plans/: 2026-05-26-tench-authoring-extraction-1.0.md
plans/background/story/: automatic-chapter-selection-highlight-behavior.md  automatic-command-palette-render-behavior.md  automatic-cursor-placement-behavior.md  automatic-dirty-title-indicator-behavior.md  automatic-export-modal-render-behavior.md  automatic-focus-mode-layout-behavior.md  automatic-overlay-exclusivity-behavior.md  automatic-right-panel-content-render-behavior.md  automatic-search-bar-render-behavior.md  automatic-statistics-refresh-behavior.md  automatic-status-bar-sync-behavior.md  automatic-word-count-badge-behavior.md
plans/background/universe/: automatic-active-mode-content-render.md  automatic-character-selection-highlight.md  automatic-chat-message-bubble-render.md  automatic-composer-placeholder.md  automatic-interactive-choice-selection-render.md  automatic-local-runtime-status-render.md  automatic-modal-exclusivity.md  automatic-modal-layout.md  automatic-prompt-preview-width.md  automatic-right-panel-persona-detail-render.md  automatic-toast-display.md
plans/design/story/: ai-assist-placeholder-control.md  ai-assist-right-panel-tab-button.md  chapter-tree-row-control.md  character-arc-mind-map-node-button.md  character-row-control.md  characters-right-panel-tab-button.md  command-palette-add-chapter-row-button.md  command-palette-ai-assist-panel-row-button.md  command-palette-backdrop-dismiss-control.md  command-palette-characters-panel-row-button.md  command-palette-delete-chapter-row-button.md  command-palette-export-row-button.md  command-palette-focus-mode-row-button.md  command-palette-glossary-panel-row-button.md  command-palette-header-toggle-button.md  command-palette-new-project-row-button.md  command-palette-open-project-row-button.md  command-palette-redo-row-button.md  command-palette-save-project-row-button.md  command-palette-search-row-button.md  command-palette-statistics-panel-row-button.md  command-palette-timeline-panel-row-button.md  command-palette-undo-row-button.md  command-palette-world-building-panel-row-button.md  comment-row-control.md  comments-right-panel-tab-button.md  conflict-mind-map-node-button.md  control-e-export-shortcut-control.md  control-f-search-shortcut-control.md  control-p-command-palette-shortcut-control.md  control-s-save-shortcut-control.md  control-shift-z-redo-shortcut-control.md  control-y-redo-shortcut-control.md  control-z-undo-shortcut-control.md  docx-export-format-button.md  epub-export-format-button.md  escape-close-overlays-shortcut-control.md  export-header-button.md  export-modal-backdrop-dismiss-control.md  focus-header-toggle-button.md  (+33 more)
plans/design/universe/: backspace-composer.md  character-row.md  character-search-field.md  chat-mode-tab.md  composer-text-input.md  enter-send.md  header-settings-icon.md  history-button.md  interactive-choice-call-ari-over.md  interactive-choice-open-gate.md  interactive-choice-touch-seal.md  interactive-choice-walk-away.md  interactive-mode-tab.md  left-panel-settings.md  modal-backdrop-dismiss.md  modal-close-x.md  modal-done.md  new-character.md  novel-mode-tab.md  persona-edit.md  pinned-memory-row.md  script-mode-tab.md  send-message.md  template-picker.md
plans/implement/story/: ai-assist-placeholder-control.md  ai-assist-right-panel-tab-button.md  automatic-chapter-selection-highlight-behavior.md  automatic-command-palette-render-behavior.md  automatic-cursor-placement-behavior.md  automatic-dirty-title-indicator-behavior.md  automatic-export-modal-render-behavior.md  automatic-focus-mode-layout-behavior.md  automatic-overlay-exclusivity-behavior.md  automatic-right-panel-content-render-behavior.md  automatic-search-bar-render-behavior.md  automatic-statistics-refresh-behavior.md  automatic-status-bar-sync-behavior.md  automatic-word-count-badge-behavior.md  chapter-tree-row-control.md  character-arc-mind-map-node-button.md  character-row-control.md  characters-right-panel-tab-button.md  command-palette-add-chapter-row-button.md  command-palette-ai-assist-panel-row-button.md  command-palette-backdrop-dismiss-control.md  command-palette-characters-panel-row-button.md  command-palette-delete-chapter-row-button.md  command-palette-export-row-button.md  command-palette-focus-mode-row-button.md  command-palette-glossary-panel-row-button.md  command-palette-header-toggle-button.md  command-palette-new-project-row-button.md  command-palette-open-project-row-button.md  command-palette-redo-row-button.md  command-palette-save-project-row-button.md  command-palette-search-row-button.md  command-palette-statistics-panel-row-button.md  command-palette-timeline-panel-row-button.md  command-palette-undo-row-button.md  comment-row-control.md  (+43 more)
tools/architecture-guard/: line_budget_baseline.txt  main.rs
(+149 files in other folders)
