[workspace]
members = [
  "apps/story/src-tauri",
  "apps/universe/src-tauri",
  "crates/tench-ui",
  "crates/ui-automation-core",
  "crates/tench-ui-test",
  "crates/storage-core",
  "crates/fs-core",
  "crates/document-core",
  "crates/office-io",
  "crates/story-core",
  "crates/workspace-core",
  "tools/architecture-guard",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Tench"]

[workspace.dependencies]
# External dependencies — only those used by extracted crates/apps
accesskit = { version = "0.24" }
aes-gcm = { version = "0.10" }
getrandom = { version = "0.3" }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tga", "tiff", "webp"] }
kurbo = { version = "0.13" }
log = { version = "0.4" }
parley = { version = "0.9" }
peniko = { version = "0.6" }
pollster = { version = "0.4" }
raw-window-handle = { version = "0.6" }
regex = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
smallvec = { version = "1" }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tray-icon = { version = "0.23" }
vello = { version = "0.8" }
winit = { version = "0.30" }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# Internal crates
tench-document-core = { path = "crates/document-core" }
tench-fs-core = { path = "crates/fs-core" }
tench-office-io = { path = "crates/office-io" }
tench-storage-core = { path = "crates/storage-core" }
tench-story-core = { path = "crates/story-core" }
tench-ui = { path = "crates/tench-ui" }
tench-ui-automation-core = { path = "crates/ui-automation-core" }
tench-ui-test = { path = "crates/tench-ui-test" }
tench-workspace-core = { path = "crates/workspace-core" }
