[package]
name = "tench-ui-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Test harness for Rust-native UI testing with tench-ui"

[dependencies]
tench-ui = { path = "../tench-ui" }
tench-ui-automation-core.workspace = true
accesskit.workspace = true
image.workspace = true
kurbo.workspace = true
pollster.workspace = true

[lib]
name = "tench_ui_test"
