[package]
name = "tench-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tench self-built UI framework — retained-mode widget tree with GPU rendering"

[dependencies]
vello.workspace = true
parley.workspace = true
accesskit.workspace = true
kurbo.workspace = true
peniko.workspace = true
smallvec.workspace = true
tauri = { workspace = true, optional = true }
log.workspace = true
image.workspace = true
pollster = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tench-ui-automation-core.workspace = true

[features]
default = ["native"]
tauri = ["dep:tauri", "dep:pollster", "dep:raw-window-handle", "dep:serde_json"]
native = ["dep:winit", "dep:pollster"]
tray = ["dep:tray-icon"]
updater = ["dep:reqwest", "dep:tokio", "dep:serde"]
ui-automation = ["tauri"]
